tests/fixtures/errors/e0406_index_out_of_range.mimz
// expect: E0406
module M {
  in data: bits[8]
  out y: bit
  y = data[8]
}
